--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
     "bootstrap": "^5.3.8",
     "gh-pages": "^6.3.0",
     "react": "^19.0.0",
